# codex-configurator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: demo-readiness.yml
docs/: configuration-engine-wiki.md  demo-deployment-checklist.md  experience-studio-wiki.md
src/sales_configurator/: __init__.py  __main__.py  app.py  db.py  rules_engine.py
src/sales_configurator/static/css/: app.css
src/sales_configurator/templates/: login.html
src/sales_configurator/templates/configurator/: index.html
src/sales_configurator/templates/front_end_editor/: index.html
src/sales_configurator/templates/landing/: index.html
src/sales_configurator/templates/rules_engine/: index.html
tests/: test_apps.py  test_demo_readiness.py  test_rules_engine.py
